[project]
name = "yasno"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "mariadb==1.1.14",
    "orjson==3.11.4",
    "packaging==25.0",
    "pyaml-env==1.2.2",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "uv==0.9.5",
]
